--- a/nonograms/package.json
+++ b/nonograms/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.1",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
