--- a/nonograms/package.json
+++ b/nonograms/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.1",
+    "file-loader": "^6.2.0",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
     "style-loader": "^3.3.4",
