--- a/nonograms/package.json
+++ b/nonograms/package.json
@@ -10,7 +10,7 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "deploy": "npm run build && npx gh-pages -d dist -e hangman",
+    "deploy": "npm run build && npx gh-pages -d dist -e nonograms",
     "build": "webpack"
   }
 }
