--- a/news-api/.eslintrc.json
+++ b/news-api/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "plugins": ["prettier", "import", "@typescript-eslint"],
-  "extends": ["plugin:prettier/recommended", "prettier", "eslint:recommended"],
+  "extends": ["plugin:prettier/recommended", "prettier", "eslint:recommended", "plugin:@typescript-eslint/eslint-recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2020,
