--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "rss-puzzle",
+  "private": true,
+  "scripts": {
+    "build": "webpack"
+  },
   "devDependencies": {
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
