--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -5,6 +5,9 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
