--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.2.5",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
