--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -2,7 +2,9 @@
   "name": "rss-puzzle",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "format": "prettier --write ./src",
+    "ci:format": "prettier --check ./src"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
