--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -12,6 +12,8 @@
     "eslint": "^8.57.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "3.2.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
