--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "buildLocal": "webpack",
     "build": "webpack --mode production",
-    "format": "prettier --write ./src",
-    "ci:format": "prettier --check ./src"
+    "format": "prettier --write ./src/utils",
+    "ci:format": "prettier --check ./src/utils",
+    "lint": "eslint ./src/utils"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "3.2.5",
     "ts-loader": "^9.5.1",
