--- a/rss-puzzle/tsconfig.json
+++ b/rss-puzzle/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "outDir": "./dist/utils",
     "noImplicitAny": true,
-    "skipLibCheck": true
+    "module": "commonjs",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node",
   }
 }
