--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
     "prettier": "3.2.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
