--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -6,7 +6,8 @@
     "build": "webpack --mode production",
     "format": "prettier --write ./src/utils",
     "ci:format": "prettier --check ./src/utils",
-    "lint": "eslint ./src/utils"
+    "lint": "eslint ./src/utils",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -21,5 +22,10 @@
     "typescript": "^5.3.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run ci:format"
+    }
   }
 }
