--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -25,7 +25,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run ci:format"
+      "pre-commit": "npm run ci:format"
     }
   }
 }
+
