--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -7,7 +7,7 @@
     "format": "prettier --write ./src/utils",
     "ci:format": "prettier --check ./src/utils",
     "lint": "eslint ./src/utils",
-    "prepare": "husky"
+    "prepare": "cd .. && husky rss-puzzle/.husky"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -22,11 +22,5 @@
     "typescript": "^5.3.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run ci:format"
-    }
   }
 }
-
