fix: RSS-PZ-34 fix settings for --webpack watch

--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "buildLocal": "webpack",
     "build": "webpack --mode production",
-    "format": "prettier --write ./src/utils",
+    "format": "prettier --write ./src",
     "ci:format": "prettier --check ./src",
     "lint": "eslint ./src",
     "prepare": "cd .. && husky rss-puzzle/.husky"
