--- a/rss-puzzle/tsconfig.json
+++ b/rss-puzzle/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/utils",
+    "outDir": "./dist",
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
