--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
     "prettier": "3.2.5",
