--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -19,6 +19,8 @@
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
     "prettier": "3.2.5",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.3",
