--- a/rss-puzzle/package.json
+++ b/rss-puzzle/package.json
@@ -19,6 +19,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
+    "json-loader": "^0.5.7",
     "prettier": "3.2.5",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
