--- a/rss-puzzle/.eslintrc.json
+++ b/rss-puzzle/.eslintrc.json
@@ -5,8 +5,9 @@
     },
     "extends": [
         "eslint:recommended",
+        "airbnb-base",
         "plugin:@typescript-eslint/recommended",
-        "airbnb-base"
+        "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -14,8 +15,12 @@
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
+        "import/extensions": "off",
+        "import/no-unresolved": "off" 
     }
 }
+
