--- a/rss-puzzle/tsconfig.json
+++ b/rss-puzzle/tsconfig.json
@@ -1,11 +1,21 @@
+
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "noImplicitAny": true,
+    "target": "ES6",
     "module": "commonjs",
-    "target": "es5",
-    "jsx": "react",
-    "allowJs": true,
-    "moduleResolution": "node",
-  }
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
+    "baseUrl": "./",
+    "paths": {
+      "*": [
+        "node_modules/*",
+        "*"
+      ]
+    },
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
