--- a/async-race/package.json
+++ b/async-race/package.json
@@ -12,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
+    "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
