--- a/async-race/package.json
+++ b/async-race/package.json
@@ -16,6 +16,8 @@
     "@typescript-eslint/parser": "^7.3.1",
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.72.0",
