--- a/async-race/package.json
+++ b/async-race/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.72.0",
