--- a/async-race/.eslintrc.json
+++ b/async-race/.eslintrc.json
@@ -5,14 +5,18 @@
     },
     "extends": [
         "eslint-config-airbnb-base",
-        "airbnb-typescript/base"
+        "airbnb-typescript/base",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended",
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "project": "./tsconfig.json"
     },
     "plugins": [
-        "@typescript-eslint"
+        "prettier", "import", "@typescript-eslint"
     ],
     "rules": {
         "no-console": 0
