feat:AR-RSS-02 render base for cars

--- a/async-race/tsconfig.json
+++ b/async-race/tsconfig.json
@@ -5,7 +5,13 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
+    "moduleResolution": "node",
     "skipLibCheck": true
   },
-  "include": ["src/**/*", ".eslintrc.js"]
+  "include": [
+    "src/**/*",
+    ".eslintrc.js",
+    "src/components",
+    "custom.d.ts"
+  ]
 }
