--- a/fun-chat/package.json
+++ b/fun-chat/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode=production --node-env=production",
     "format": "npx prettier --write .",
     "ci:format": "npx prettier --check .",
-    "lint": "npx eslint src/**/*.ts"
+    "lint": "npx eslint src/**/*.ts",
+    "start": "webpack serve --open --mode=development"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
