--- a/fun-chat/package.json
+++ b/fun-chat/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-webpack-plugin": "^4.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.11",
     "path-to-regexp": "^6.2.2",
     "prettier": "3.2.5",
     "sass": "^1.74.1",
