fix: fix eslint rule

--- a/fun-chat/.eslintrc.json
+++ b/fun-chat/.eslintrc.json
@@ -17,6 +17,7 @@
     },
     "plugins": ["prettier", "import", "@typescript-eslint"],
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "import/no-cycle": "off"
     }
 }
